# graphics_tut

./: CMakeLists.txt  rasterization_pipeline.md
dependencies/GLUT/: INSTALL_RECEIPT.json
dependencies/GLUT/.brew/: freeglut.rb
dependencies/GLUT/lib/: libglut.3.dylib
dependencies/GLUT/lib/cmake/FreeGLUT/: FreeGLUTTargets-release.cmake  FreeGLUTTargets.cmake
dependencies/GLUT/lib/pkgconfig/: glut.pc
src/: CMakeLists.txt  main.cpp
src/code/: CMakeLists.txt  some_code.cpp  some_code.h
